1913.	[func]		Automatic empty zone creation for D.F.IP6.ARPA and
			friends.  Note: RFC 1918 zones are not yet covered by
			this but are likely to be in a future release.

			New options: empty-server, empty-contact,
			empty-zones-enable and disable-empty-zone.

1912.	[func]		ISC string copy API.

1911.	[func]		Attempt to make the amount of work performed in a
			iteration self tuning.  The covers nodes clean from
			the cache per iteration, nodes written to disk when
			rewriting a master file and nodes destroyed per
			iteration when destroying a zone or a cache.
			[RT #14996]

1910.	[cleanup]	Don't add DNSKEY records to the additional section.

1909.	[bug]		ixfr-from-differences failed to ensure that the
			serial number increased. [RT #15036]

1908.	[func]		named-checkconf now validates update-policy entries.
			[RT #14963]

1907.	[bug]		Extend ISC_SOCKADDR_FORMATSIZE and
			ISC_NETADDR_FORMATSIZE to allow for scope details.

1906.	[func]		x86 and x86_64 now have seperate atomic locking
			implementations.

1905.	[bug]		Recursive clients soft quota support wasn't working
			as expected. [RT #15103]

1904.	[bug]		A escaped character is, potentially, converted to
			the output character set too early. [RT #14666]

1903.	[doc]		Review ARM for BIND 9.4.

1902.	[port]		Use uintptr_t if available. [RT #14606]

1901.	[func]		Support for SPF rdata type. [RT #15033]

1900.	[port]		freebsd: pthread_mutex_init can fail if it runs out
			of memory. [RT #14995]

1899.	[func]		Raise the UDP recieve buffer size to 32k if it is
			less than 32k. [RT #14953]

1898.	[port]		sunos: non blocking i/o support. [RT #14951]

1897.	[func]		Support for IPSECKEY rdata type. [RT #14967]

1896.	[bug]		The cache could delete expired records too fast for
			clients with a virtual time in the past. [RT #14991]

1895.	[bug]		fctx_create() could return success even though it
			failed. [RT #14993]

1894.	[func]		dig: report the number of extra bytes still left in