@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.4 2004/03/05 04:59:23 marka Exp $ */
+/* $Id: named.conf,v 1.5 2005/08/23 02:36:08 marka Exp $ */
 
 controls { /* empty */ };
 
@@ -29,6 +29,7 @@ options {
 	listen-on-v6 { none; };
 	notify yes;
 	max-cache-size 10000;
+	disable-empty-zone 127.IN-ADDR.ARPA;
 };
 
 zone "." {
